@@ -1,3 +1,7 @@
+2005-02-21  Darin Adler  <darin@apple.com>
+
+        * kjs/date_object.cpp: (timetUsingCF): Fixed indenting.
+
 2005-02-17  Richard Williamson   <rjw@apple.com>
 
 	Fixed <rdar://problem/4003251> Safari crashed at www.icelandair.com in LiveConnect code converting a Java object to a string
